# projecto-final-los-abuelitos

./: CMakeLists.txt
docs/: README.md
include/utec/agent/: EnvGym.h  PongAgent.h
include/utec/algebra/: Tensor.h
include/utec/nn/: activation.h  dense.h  interfaces.h  loss.h  neural_network.h  optimizer.h
src/: main.cpp
src/utec/agent/: EnvGym.cpp
video de exposicion/: GUIA EXPO.docx
